chore: add custom font

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: "Rubik";
+        src: url('/fonts/Rubik-Regular.ttf') format('ttf'), url('/fonts/Rubik-Italic.ttf') format('ttf'), url('/fonts/Rubik-SemiBold.ttf') format('ttf')
+    }
+}
