--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
     @font-face {
-        font-family: "Rubik";
-        src: url('/fonts/Rubik-Regular.ttf') format('ttf'), url('/fonts/Rubik-Italic.ttf') format('ttf'), url('/fonts/Rubik-SemiBold.ttf') format('ttf')
+        font-family: "Rubik", "arabic";
+        src: url('/fonts/Rubik-Regular.ttf') format('ttf'), url('/fonts/Rubik-Italic.ttf') format('ttf'), url('/fonts/Rubik-SemiBold.ttf') format('ttf'), url('/fonts/Scheherazade-Bold.ttf') format('ttf'), url('/fonts/Scheherazade-Regular.ttf') format('ttf')
     }
 }
