--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,6 +5,6 @@
 @layer base {
     @font-face {
         font-family: "Rubik", "arabic";
-        src: url('/fonts/Rubik-Regular.ttf') format('ttf'), url('/fonts/Rubik-Italic.ttf') format('ttf'), url('/fonts/Rubik-SemiBold.ttf') format('ttf'), url('/fonts/Scheherazade-Bold.ttf') format('ttf'), url('/fonts/Scheherazade-Regular.ttf') format('ttf')
+        src: url('/fonts/Rubik-Regular.ttf') format('ttf'), url('/fonts/Rubik-Italic.ttf') format('ttf'), url('/fonts/Rubik-SemiBold.ttf') format('ttf'), url('/fonts/Scheherazade-Regular.ttf') format('ttf')
     }
 }
